# apn-tester

./: .gitignore  LICENSE  README.md  local-push.py  main.py  pyproject.toml  simulator-payload.apns  simulator.py  utils.py
iOS_demo_client/: README.md
iOS_demo_client/try-push/: AppDelegate.swift  ContentView.swift  try_pushApp.swift
iOS_demo_client/try-push.xcodeproj/: project.pbxproj
iOS_demo_client/try-push.xcodeproj/project.xcworkspace/xcuserdata/kng.xcuserdatad/: UserInterfaceState.xcuserstate
iOS_demo_client/try-push.xcodeproj/xcshareddata/xcschemes/: try-push.xcscheme
iOS_demo_client/try-push.xcodeproj/xcuserdata/kng.xcuserdatad/xcschemes/: xcschememanagement.plist
